--- a/151_200.md
+++ b/151_200.md
@@ -848,8 +848,7 @@ While these are essential security practices for ensuring end-to-end encryption 
 
 <details>
   <summary>Question 173</summary>
-
-- [ ] A.  Turn  
+ 
 A gaming company hosts a browser-based application on AWS. The users of the application consume a large number of videos and images that are stored in Amazon S3. This content is the same for all users.
 
 The application has increased in popularity, and millions of users worldwide accessing these media files. The company wants to provide the files to the users while reducing the load on the origin.
@@ -885,6 +884,296 @@ Why are the other answers wrong?
 - [ ] Option D is wrong because: Similar to ElastiCache for Redis, Amazon ElastiCache for Memcached is an in-memory caching service. It is also not suited for the use case of caching and globally distributing large static media files. CloudFront is the appropriate service for edge caching and delivery of such content.
 
 </details>
+
+<details>
+  <summary>Question 174</summary>
+
+A company has a multi-tier application that runs six front-end web servers in an Amazon EC2 Auto Scaling group in a single Availability Zone behind an Application Load Balancer (ALB). A solutions architect needs to modify the infrastructure to be highly available without modifying the application.
+
+Which architecture should the solutions architect choose that provides high availability?
+
+- [ ] A. Create an Auto Scaling group that uses three instances across each of two Regions.
+- [ ] B. Modify the Auto Scaling group to use three instances across each of two Availability Zones.
+- [ ] C. Create an Auto Scaling template that can be used to quickly create more instances in another Region.
+- [ ] D. Change the ALB in front of the Amazon EC2 instances in a round-robin configuration to balance traffic to the web tier.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] B. Modify the Auto Scaling group to use three instances across each of two Availability Zones.
+
+Why this is the correct answer:
+
+- [ ] Addressing Single Point of Failure: The current setup has all web servers in a "single Availability Zone." This is a single point of failure; if that Availability Zone (AZ) experiences an outage, the entire web tier becomes unavailable.
+- [ ] Multi-AZ for High Availability: To achieve high availability within an AWS Region, the standard practice is to distribute resources across multiple Availability Zones. Modifying the Auto Scaling group to launch instances across at least two Availability Zones (e.g., three instances in each of two AZs, or distributing the existing six instances across two or more AZs) ensures that if one AZ fails, the instances in the other AZ(s) can continue to operate and serve traffic.
+- [ ] Application Load Balancer (ALB) Supports Multi-AZ: An Application Load Balancer is designed to distribute traffic to target instances across multiple AZs for which it is configured. This works seamlessly with a Multi-AZ Auto Scaling group.
+- [ ] No Application Modification: This change is purely at the infrastructure level (Auto Scaling group configuration, VPC subnet configuration for the ASG) and does not require any modifications to the application code itself, as per the requirement.
+
+Why are the other answers wrong?
+
+- [ ] Option A is wrong because: Deploying instances across multiple AWS Regions is a strategy for disaster recovery or for serving a globally distributed user base with regional endpoints. It introduces significant complexity (e.g., data replication across regions, inter-region latency, more complex routing) and is generally a much larger undertaking than achieving high availability within a single region by using multiple Availability Zones. The first step to high availability is typically Multi-AZ within a region.
+- [ ] Option C is wrong because: Creating an Auto Scaling template for another Region is a preparatory step for disaster recovery (i.e., being able to launch resources in another region if the primary region fails). It does not make the current infrastructure in the primary region highly available against an AZ failure within that region.
+- [ ] Option D is wrong because: Application Load Balancers already distribute traffic using algorithms like round-robin or least outstanding requests. Simply ensuring or changing to a round-robin configuration does not address the fundamental high availability issue, which is that all instances are currently located in a single Availability Zone. The problem lies in the instance deployment strategy, not the ALB's load distribution method within that single AZ.
+
+</details>
+
+<details>
+  <summary>Question 175</summary>
+
+An ecommerce company has an order-processing application that uses Amazon API Gateway and an AWS Lambda function. The application stores data in an Amazon Aurora PostgreSQL database. During a recent sales event, a sudden surge in customer orders occurred. Some customers experienced timeouts, and the application did not process the orders of those customers. A solutions architect determined that the CPU utilization and memory utilization were high on the database because of a large number of open connections. The solutions architect needs to prevent the timeout errors while making the least possible changes to the application.
+
+Which solution will meet these requirements?
+
+- [ ] A. Configure provisioned concurrency for the Lambda function. Modify the database to be a global database in multiple AWS Regions.
+- [ ] B. Use Amazon RDS Proxy to create a proxy for the database. Modify the Lambda function to use the RDS Proxy endpoint instead of the database endpoint.
+- [ ] C. Create a read replica for the database in a different AWS Region. Use query string parameters in API Gateway to route traffic to the read replica.
+- [ ] D. Migrate the data from Aurora PostgreSQL to Amazon DynamoDB by using AWS Database Migration Service (AWS DMS). Modify the Lambda function to use the DynamoDB table.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] B. Use Amazon RDS Proxy to create a proxy for the database. Modify the Lambda function to use the RDS Proxy endpoint instead of the database endpoint.
+
+Why this is the correct answer:
+
+- [ ] Problem: Database Connection Exhaustion: The root cause of the timeouts and high CPU/memory utilization on the database is identified as "a large number of open connections."
+- [ ] This is a common issue with serverless applications like AWS Lambda functions connecting to relational databases, as each concurrent - [ ] Lambda execution might try to establish its own database connection, quickly exhausting the database's connection limit during surges.
+- [ ] Amazon RDS Proxy for Connection Pooling: Amazon RDS Proxy is a fully managed, highly available database proxy that sits between your application (the Lambda functions) and your Amazon Aurora database.
+- [ ] It maintains a pool of established connections to the database and efficiently reuses these connections for application requests.
+- [ ] This significantly reduces the number of new connections made directly to the database, especially from frequently invoked, short-lived Lambda functions.
+- [ ] Preventing Timeouts and Reducing Load: By managing and reusing connections, RDS Proxy helps prevent the database from being overwhelmed by connection requests during traffic surges, thus reducing CPU/memory utilization related to connection management and preventing timeout errors.
+- [ ] Least Possible Changes: Modifying the Lambda function to connect to the RDS Proxy endpoint instead of the direct database endpoint typically involves a minimal change to the database connection string in the Lambda function's configuration or code.
+- [ ] This aligns with the requirement of "making the least possible changes to the application."
+
+Why are the other answers wrong?
+
+- [ ] Option A is wrong because:
+Configuring provisioned concurrency for the Lambda function helps reduce cold start latency by keeping a certain number of Lambda execution environments warm. It does not solve the problem of each of those (potentially many) warm instances opening a new connection to the database.
+Modifying the database to be an Aurora Global Database is a solution for providing low-latency global reads and disaster recovery across regions. It does not address the issue of connection exhaustion on a specific regional database endpoint due to a surge in local application connections.
+- [ ] Option C is wrong because: Creating a read replica is for offloading read traffic from the primary database. While this can help with overall database performance if reads are a bottleneck, the problem statement specifically points to "a large number of open connections" causing high CPU and memory, which affects all types of operations, including writes for order processing. Simply routing some traffic to a read replica (especially in a different region, which adds latency) doesn't solve the core connection pooling issue for the primary database that handles writes.
+- [ ] Option D is wrong because: Migrating the database from Amazon Aurora PostgreSQL (a relational database) to Amazon DynamoDB (a NoSQL database) is a major architectural change. It would require significant data modeling changes and extensive modifications to the Lambda function's data access logic. This contradicts the requirement of "making the least possible changes to the application."
+
+</details>
+
+<details>
+  <summary>Question 176</summary>
+
+An application runs on Amazon EC2 instances in private subnets. The application needs to access an Amazon DynamoDB table.
+
+What is the MOST secure way to access the table while ensuring that the traffic does not leave the AWS network?
+
+- [ ] A. Use a VPC endpoint for DynamoDB.
+- [ ] B. Use a NAT gateway in a public subnet.
+- [ ] C. Use a NAT instance in a private subnet.
+- [ ] D. Use the internet gateway attached to the VPC.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] A. Use a VPC endpoint for DynamoDB.
+
+Why this is the correct answer:
+
+- [ ] VPC Endpoint for DynamoDB (Gateway Endpoint): Amazon DynamoDB supports gateway VPC endpoints. A gateway endpoint allows your EC2 instances in private subnets within your VPC to securely access DynamoDB tables in the same AWS Region without requiring traffic to traverse an Internet Gateway, NAT Gateway, VPN connection, or AWS Direct Connect connection.
+- [ ] Traffic Stays Within the AWS Network: When using a VPC endpoint for DynamoDB, traffic between your VPC and DynamoDB remains entirely within the AWS private network. This directly meets the requirement that "traffic does not leave the AWS network."
+- [ ] MOST Secure Way: This is considered the most secure method for accessing DynamoDB from within a VPC because it avoids exposing your instances or traffic to the public internet. You can also attach an endpoint policy to the VPC endpoint to further control which DynamoDB tables or actions are accessible from your VPC.
+- [ ] No Additional Cost: There are no additional charges for using gateway VPC endpoints.
+
+Why are the other answers wrong?
+
+- [ ] Option B is wrong because: A NAT gateway allows instances in a private subnet to initiate outbound connections to the internet or to public AWS service endpoints (like the public DynamoDB endpoints). While traffic to DynamoDB in the same region via a NAT gateway typically stays within the AWS backbone, it still involves routing through the NAT gateway and accessing public service endpoints. A VPC endpoint provides a more direct and private path and avoids any potential for traffic to inadvertently route externally. It also avoids NAT gateway data processing charges.
+- [ ] Option C is wrong because: A NAT instance, similar to a NAT gateway, provides outbound internet connectivity. However, placing a NAT instance in a private subnet is an incorrect configuration, as it would not have a route to the internet gateway. Even if correctly placed in a public subnet, it shares the same drawbacks as a NAT gateway for this specific use case compared to a VPC endpoint and adds the operational overhead of managing an EC2 instance.
+- [ ] Option D is wrong because: An internet gateway is used to allow resources with public IP addresses (typically in public subnets) to communicate with the internet. EC2 instances in "private subnets" by definition do not have a direct route to an internet gateway for outbound traffic. If they were to access DynamoDB via an internet gateway, it would imply they are not truly private or are misconfigured, and the traffic would be using public DynamoDB endpoints. This is not the most secure method and doesn't ensure traffic stays off the broader internet path.
+
+</details>
+
+<details>
+  <summary>Question 177</summary>
+ 
+An entertainment company is using Amazon DynamoDB to store media metadata. The application is read intensive and experiencing delays. The company does not have staff to handle additional operational overhead and needs to improve the performance efficiency of DynamoDB without reconfiguring the application.
+
+What should a solutions architect recommend to meet this requirement?
+
+- [ ] A. Use Amazon ElastiCache for Redis.
+- [ ] B. Use Amazon DynamoDB Accelerator (DAX).
+- [ ] C. Replicate data by using DynamoDB global tables.
+- [ ] D. Use Amazon ElastiCache for Memcached with Auto Discovery enabled.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] B. Use Amazon DynamoDB Accelerator (DAX).
+
+Why this is the correct answer:
+
+- [ ] Amazon DynamoDB Accelerator (DAX): DAX is a fully managed, highly available, in-memory cache specifically designed for Amazon DynamoDB. It seamlessly integrates with DynamoDB and can significantly reduce read latency from milliseconds to microseconds, even for applications with millions of requests per second.
+- [ ] Addresses Read-Intensive Delays: The application is "read intensive and experiencing delays." DAX caches frequently accessed DynamoDB data, serving read requests directly from the cache, which dramatically improves read performance and reduces the load on the underlying DynamoDB table.
+- [ ] Without Reconfiguring the Application (Minimal Changes): DAX is API-compatible with DynamoDB. In most cases, applications can use DAX with minimal or no modification by simply updating the DynamoDB client to point to the DAX cluster endpoint. This aligns with the "without reconfiguring the application" (or with very minimal changes) requirement.
+- [ ] No Additional Operational Overhead: DAX is a fully managed service. AWS handles the patching, maintenance, scaling, and fault tolerance of the DAX cluster, so the company "does not have staff to handle additional operational overhead."
+- [ ] This solution directly targets the read performance issue for DynamoDB with a managed service requiring minimal application changes and low operational overhead.
+
+Why are the other answers wrong?
+
+- [ ] Option A is wrong because: While Amazon ElastiCache for Redis is a powerful in-memory caching service, integrating it with an existing DynamoDB application would typically require significant application code changes to implement caching logic (e.g., check the Redis cache first, then DynamoDB on a cache miss, and update Redis on writes to DynamoDB). This contradicts the requirement of "without reconfiguring the application" (or minimal changes). DAX offers a more transparent caching layer for DynamoDB.
+- [ ] Option C is wrong because: DynamoDB global tables provide a multi-region, multi-active database solution, primarily for building globally distributed applications or for disaster recovery. While global tables can improve read latency for users in different geographic regions by providing local replicas, they do not specifically address read delays caused by a read-intensive workload on a single-region DynamoDB table in the same way a dedicated in-memory cache like DAX does. Global tables also add complexity and cost.
+- [ ] Option D is wrong because: Similar to ElastiCache for Redis, Amazon ElastiCache for Memcached is a general-purpose in-memory caching service. It would also require application code modifications to integrate caching logic for DynamoDB data, which is not ideal when trying to avoid application reconfiguration. DAX is purpose-built for DynamoDB caching.
+
+</details>
+
+<details>
+  <summary>Question 178</summary>
+
+A company's infrastructure consists of Amazon EC2 instances and an Amazon RDS DB instance in a single AWS Region. The company wants to back up its data in a separate Region.
+
+Which solution will meet these requirements with the LEAST operational overhead?
+
+- [ ] A. Use AWS Backup to copy EC2 backups and RDS backups to the separate Region.
+- [ ] B. Use Amazon Data Lifecycle Manager (Amazon DLM) to copy EC2 backups and RDS backups to the separate Region.
+- [ ] C. Create Amazon Machine Images (AMIs) of the EC2 instances. Copy the AMIs to the separate Region. Create a read replica for the RDS DB instance in the separate Region.
+- [ ] D. Create Amazon Elastic Block Store (Amazon EBS) snapshots. Copy the EBS snapshots to the separate Region. Create RDS snapshots. Export the RDS snapshots to Amazon S3. Configure S3 Cross-Region Replication (CRR) to the separate Region.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] A. Use AWS Backup to copy EC2 backups and RDS backups to the separate Region.
+
+Why this is the correct answer:
+
+- [ ] AWS Backup for Centralized Backup Management: AWS Backup is a fully managed backup service that makes it easy to centralize and automate the backup of data across various AWS services, including Amazon EC2 instances (which involves backing up their EBS volumes, often as part of AMIs or snapshots) and Amazon RDS DB instances.
+- [ ] Cross-Region Backup Copies: A key feature of AWS Backup is the ability to create backup plans that automatically copy backups to a different AWS Region. This directly meets the requirement to "back up its data in a separate Region."
+- [ ] Least Operational Overhead: By using AWS Backup, the company can define backup schedules, retention policies, and cross-region copy rules in a single place. AWS Backup then automates the entire process. This significantly reduces the operational overhead compared to manually creating snapshots, copying them, and managing their lifecycle, or using multiple service-specific tools.
+- [ ] This solution provides a unified, automated, and low-overhead way to manage and replicate backups for both EC2 and RDS to another region.
+
+Why are the other answers wrong?
+
+- [ ] Option B is wrong because: Amazon Data Lifecycle Manager (DLM) is primarily used for automating the creation, retention, and deletion of Amazon EBS snapshots and EBS-backed AMIs. While DLM can copy EBS snapshots across regions, it does not natively manage Amazon RDS backups. AWS Backup offers a more comprehensive solution for managing backups across different types of AWS resources, including RDS.
+- [ ] Option C is wrong because:
+Manually creating AMIs of EC2 instances and copying them to another region is a valid way to back up EC2 instances cross-region, but it's more operationally intensive than using AWS Backup.
+Creating an RDS read replica in a separate region is primarily a solution for read scaling or for creating a continuously updated standby for disaster recovery (which can be promoted). While it does replicate data, it's not a "backup" in the traditional sense of a point-in-time snapshot stored for recovery, and it incurs the cost of a running DB instance in the DR region. AWS Backup handles point-in-time RDS backups.
+- [ ] Option D is wrong because: This option describes a very manual and fragmented process. It involves manually creating EBS snapshots and copying them, manually creating RDS snapshots, then exporting RDS snapshots to Amazon S3 (which is an extra step and not always the most direct way to manage RDS backups for DR), and then configuring S3 Cross-Region Replication for those exported S3 objects. This has significantly more steps and higher operational overhead compared to the streamlined, automated approach offered by AWS Backup.
+
+</details>
+
+<details>
+  <summary>Question 179</summary>
+
+A solutions architect needs to securely store a database user name and password that an application uses to access an Amazon RDS DB instance. The application that accesses the database runs on an Amazon EC2 instance. The solutions architect wants to create a secure parameter in AWS Systems Manager Parameter Store.
+
+What should the solutions architect do to meet this requirement?
+
+- [ ] A. Create an IAM role that has read access to the Parameter Store parameter. Allow Decrypt access to an AWS Key Management Service (AWS KMS) key that is used to encrypt the parameter. Assign this IAM role to the EC2 instance.
+- [ ] B. Create an IAM policy that allows read access to the Parameter Store parameter. Allow Decrypt access to an AWS Key Management Service (AWS KMS) key that is used to encrypt the parameter. Assign this IAM policy to the EC2 instance.
+- [ ] C. Create an IAM trust relationship between the Parameter Store parameter and the EC2 instance. Specify Amazon RDS as a principal in the trust policy.
+- [ ] D. Create an IAM trust relationship between the DB instance and the EC2 instance. Specify Systems Manager as a principal in the trust policy.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] A. Create an IAM role that has read access to the Parameter Store parameter. Allow Decrypt access to an AWS Key Management Service (AWS KMS) key that is used to encrypt the parameter. Assign this IAM role to the EC2 instance.
+
+Why this is the correct answer:
+
+This solution follows AWS best practices for securely providing credentials to an EC2 instance:
+
+- [ ] Secure Storage with Parameter Store: AWS Systems Manager Parameter Store allows you to store configuration data and secrets. For sensitive information like database usernames and passwords, you should create a parameter of type SecureString. SecureString parameters are encrypted using an AWS Key Management Service (AWS KMS) key (either an AWS managed key for Parameter Store or a customer-managed key).
+- [ ] IAM Role for EC2 Instance Permissions: The recommended way for an Amazon EC2 instance to securely access other AWS services is by using an IAM role. You create an IAM role and attach policies to it that grant the necessary permissions. This role is then associated with the EC2 instance through an instance profile. The application on the EC2 instance automatically receives temporary security credentials from this role.
+- [ ] Required Permissions for the Role: The IAM role attached to the EC2 instance needs the following permissions:
+- [ ] Permission to read the specific parameter from Parameter Store (e.g., ssm:GetParameter, ssm:GetParameters on the specific parameter ARN).
+- [ ] Permission to decrypt the parameter's value using the AWS KMS key that was used to encrypt it (the kms:Decrypt action on the specific KMS key ARN).
+- [ ] Assign Role to EC2 Instance: By assigning this correctly configured IAM role to the EC2 instance, the application running on the instance can securely retrieve and decrypt the database credentials from Parameter Store at runtime without needing to embed credentials in code or configuration files.
+
+Why are the other answers wrong?
+
+- [ ] Option B is wrong because: You cannot directly attach an IAM policy to an Amazon EC2 instance. IAM policies are attached to IAM identities (users, groups, or roles). An IAM role is created, the policy is attached to this role, and then the role is associated with the EC2 instance.
+- [ ] Option C is wrong because: IAM trust relationships are configured within an IAM role to define which principals (e.g., an AWS service like EC2, another AWS account, an IAM user) are allowed to assume that role. There is no concept of creating a trust relationship "between the Parameter Store parameter and the EC2 instance." Specifying Amazon RDS as a principal in an EC2 instance's role trust policy for this purpose is incorrect.
+- [ ] Option D is wrong because: Similar to option C, this incorrectly describes how IAM trust relationships work. A trust relationship is not established "between the DB instance and the EC2 instance" in this manner for accessing Systems Manager. The EC2 instance needs permissions (via a role) to access Systems Manager Parameter Store.
+
+</details>
+
+<details>
+  <summary>Question 180</summary>
+
+A company is designing a cloud communications platform that is driven by APIs. The application is hosted on Amazon EC2 instances behind a Network Load Balancer (NLB). The company uses Amazon API Gateway to provide external users with access to the application through APIs. The company wants to protect the platform against web exploits like SQL injection and also wants to detect and mitigate large, sophisticated DDoS attacks.
+
+Which combination of solutions provides the MOST protection? (Choose two.)
+
+- [ ] A. Use AWS WAF to protect the NLB.
+- [ ] B. Use AWS Shield Advanced with the NLB.
+- [ ] C. Use AWS WAF to protect Amazon API Gateway.
+- [ ] D. Use Amazon GuardDuty with AWS Shield Standard
+- [ ] E. Use AWS Shield Standard with Amazon API Gateway.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] B. Use AWS Shield Advanced with the NLB.
+- [ ] C. Use AWS WAF to protect Amazon API Gateway.
+
+Why these are the correct answers:
+
+This question requires a layered security approach to protect against different types of attacks at different points in the architecture.
+
+B. Use AWS Shield Advanced with the NLB.
+- [ ] DDoS Protection for Infrastructure: The Network Load Balancer (NLB) is fronting the EC2 instances.
+- [ ] AWS Shield Advanced provides enhanced protection against large and sophisticated Distributed Denial of Service (DDoS) attacks for AWS resources, including NLBs.
+- [ ] This layer helps protect the underlying application infrastructure from volumetric and network-layer DDoS attacks.
+
+C. Use AWS WAF to protect Amazon API Gateway.
+- [ ] Web Exploit Protection for APIs: Amazon API Gateway is the entry point for external users accessing the APIs.
+- [ ] AWS WAF (Web Application Firewall) integrates with API Gateway to protect against common web exploits such as SQL injection, cross-site scripting (XSS), and other Layer 7 attacks.
+- [ ] This addresses the requirement to protect "against web exploits like SQL injection."
+- [ ] Combining AWS Shield Advanced on the NLB (for infrastructure DDoS protection) and AWS WAF on API Gateway (for application-layer web exploit protection) provides comprehensive, multi-layered security.
+
+Why are the other answers wrong?
+
+- [ ] Option A is wrong because: AWS WAF is typically associated with Application Load Balancers (ALBs), Amazon API Gateway, or Amazon CloudFront. While a Network Load Balancer deals with network traffic, WAF's capabilities for inspecting HTTP/S requests are best utilized with services that operate at Layer 7. You cannot directly associate AWS WAF with an NLB for HTTP/S inspection in the same way as an ALB or API Gateway.
+- [ ] Option D is wrong because:
+Amazon GuardDuty is a threat detection service that monitors for malicious activity and unauthorized behavior. It does not actively mitigate DDoS attacks or web exploits.
+AWS Shield Standard provides baseline protection against common DDoS attacks for all AWS customers at no additional charge, but for "large, sophisticated DDoS attacks," Shield Advanced (Option B) is required.
+- [ ] Option E is wrong because: While AWS Shield Standard offers some DDoS protection, it's not designed for "large, sophisticated DDoS attacks." AWS Shield Advanced is the service for that level of protection. While WAF is needed for web exploits, Shield Standard alone is insufficient for the DDoS requirement stated.
+Therefore, Shield Advanced on the NLB and WAF on API Gateway provide the most comprehensive protection for the described scenario.
+
+</details>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
