--- a/151_200.md
+++ b/151_200.md
@@ -1149,9 +1149,76 @@ Therefore, Shield Advanced on the NLB and WAF on API Gateway provide the most co
 
 </details>
 
+<details>
+  <summary>Question 181</summary>
 
+A company has a legacy data processing application that runs on Amazon EC2 instances. Data is processed sequentially, but the order of results does not matter. The application uses a monolithic architecture. The only way that the company can scale the application to meet increased demand is to increase the size of the instances. The company's developers have decided to rewrite the application to use a microservices architecture on Amazon Elastic Container Service (Amazon ECS). What should a solutions architect recommend for communication between the microservices?
 
+- [ ] A. Create an Amazon Simple Queue Service (Amazon SQS) queue. Add code to the data producers, and send data to the queue. Add code to the data consumers to process data from the queue.
+- [ ] B. Create an Amazon Simple Notification Service (Amazon SNS) topic. Add code to the data producers, and publish notifications to the topic. Add code to the data consumers to subscribe to the topic.
+- [ ] C. Create an AWS Lambda function to pass messages. Add code to the data producers to call the Lambda function with a data object. Add code to the data consumers to receive a data object that is passed from the Lambda function.
+- [ ] D. Create an Amazon DynamoDB table. Enable DynamoDB Streams. Add code to the data producers to insert data into the table. Add code to the data consumers to use the DynamoDB Streams API to detect new table entries and retrieve the data.
 
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] A. Create an Amazon Simple Queue Service (Amazon SQS) queue. Add code to the data producers, and send data to the queue. Add code to the data consumers to process data from the queue.
+
+Why these are the correct answers:
+
+A. Create an Amazon Simple Queue Service (Amazon SQS) queue. Add code to the data producers, and send data to the queue. Add code to the data consumers to process data from the queue.
+
+- [ ] Amazon SQS is a fully managed message queuing service that enables you to decouple and scale microservices, distributed systems, and serverless applications.
+- [ ] Using SQS allows different microservices to communicate asynchronously by sending and receiving messages from the queue.
+- [ ] This approach supports the required sequential processing where the order of results doesn't matter, as SQS can manage the message queue and ensure each message is processed.
+
+Why are the other answers wrong?
+
+- [ ] B. Amazon SNS is a publish/subscribe messaging service. It is suitable for scenarios where a message needs to be sent to multiple subscribers, which is not the case here, as the data is processed sequentially by individual microservices.
+- [ ] C. Using AWS Lambda to pass messages introduces unnecessary complexity and latency. Lambda functions are designed for short-lived, event-driven tasks, not for managing persistent message queues between microservices.
+- [ ] D. Amazon DynamoDB and DynamoDB Streams are NoSQL database services. While DynamoDB Streams can capture data changes, it is not designed for general-purpose message queuing between microservices. It would also introduce unnecessary database operations for message passing.
+
+Therefore, Option A is the best choice for communication between the microservices.
+
+</details>
+
+<details>
+  <summary>Question 182</summary>
+
+A company wants to migrate its MySQL database from on premises to AWS. The company recently experienced a database outage that significantly impacted the business. To ensure this does not happen again, the company wants a reliable database solution on AWS that minimizes data loss and stores every transaction on at least two nodes. Which solution meets these requirements?
+
+-   [ ] A. Create an Amazon RDS DB instance with synchronous replication to three nodes in three Availability Zones.
+-   [ ] B. Create an Amazon RDS MySQL DB instance with Multi-AZ functionality enabled to synchronously replicate the data.
+-   [ ] C. Create an Amazon RDS MySQL DB instance and then create a read replica in a separate AWS Region that synchronously replicates the data.
+-   [ ] D. Create an Amazon EC2 instance with a MySQL engine installed that triggers an AWS Lambda function to synchronously replicate the data to an Amazon RDS MySQL DB instance.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] B. Create an Amazon RDS MySQL DB instance with Multi-AZ functionality enabled to synchronously replicate the data.
+
+Why these are the correct answers:
+
+B. Create an Amazon RDS MySQL DB instance with Multi-AZ functionality enabled to synchronously replicate the data.
+
+-   [ ] Amazon RDS Multi-AZ deployments provide enhanced availability and durability for database instances.
+-   [ ] Multi-AZ deployments use synchronous replication to a standby instance in a different Availability Zone.
+-   [ ] In case of infrastructure failure, Amazon RDS automatically performs a failover to the standby instance, minimizing downtime and data loss.
+-   [ ] This setup ensures that every transaction is stored on at least two nodes (the primary and the standby).
+
+Why are the other answers wrong?
+
+-   [ ] A. Amazon RDS does not offer a direct feature to synchronously replicate to three nodes in three Availability Zones. Multi-AZ is the closest feature, but it involves two nodes.
+-   [ ] C. Read replicas in Amazon RDS are for scaling reads, and while they involve replication, it's asynchronous, which can lead to data loss in an outage. Also, replicating to a separate AWS Region is more for disaster recovery than high availability within the same region.
+-   [ ] D. Creating an EC2 instance with MySQL and using a Lambda function to replicate data is a complex, custom solution that introduces more points of failure and operational overhead compared to using the managed RDS Multi-AZ feature. It also does not inherently guarantee synchronous replication or minimal data loss.
+
+Therefore, Option B is the most suitable solution for a reliable, highly available MySQL database on AWS with minimal data loss.
+
+</details>
 
 
 
